--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -25,6 +25,8 @@ jobs:
           trivy fs . --exit-code 0 --severity LOW,MEDIUM,HIGH,CRITICAL --format json --output trivy-iac-report.json
           echo "==> Archivos tras Trivy:"
           ls -la
+      - name: Ver contenido del informe Trivy
+        run: cat trivy-iac-report.json
 
       - name: Enviar informe de Trivy a DefectDojo
         run: |
@@ -62,6 +64,9 @@ jobs:
           echo "==> Archivos tras Dependency-Check:"
           ls -la
 
+      - name: Ver contenido del informe DependencyCheck
+        run: cat dependency-check-report.json
+
       - name: Enviar informe de Dependency-Check a DefectDojo
         run: |
           curl -s -w "%{http_code}" -o curl_output.txt -X POST \
@@ -94,7 +99,10 @@ jobs:
         run: |
           cd PAI2_ST10 && mvn clean install -Ddependency-check.skip=true spotbugs:check -Dspotbugs.output=xml -Dspotbugs.outputFile=spotbugs-report.xml
           echo "==> Archivos tras SpotBugs:"
-          ls -la PAI2_ST10
+          ls -la 
+
+      - name: Ver contenido del informe Spotbugs
+        run: cat spotbugs-report.xml
 
       - name: Enviar informe de SpotBugs a DefectDojo
         run: |
@@ -136,6 +144,10 @@ jobs:
             -r zap-report.html
           echo "==> Archivos tras OWASP ZAP:"
           ls -la
+
+
+      - name: Ver contenido del informe ZAP
+        run: cat zap-report.json
 
       - name: Enviar informe de OWASP ZAP a DefectDojo
         run: |
@@ -180,6 +192,9 @@ jobs:
           semgrep --config=auto --exclude target --exclude .git . --json > semgrep-report.sarif
           echo "==> Archivos tras Semgrep:"
           ls -la
+
+      - name: Ver contenido del informe Semgrep
+        run: cat semgrep-report.sarif
 
       - name: Enviar informe de Semgrep a DefectDojo
         run: |
