--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -23,14 +23,10 @@ jobs:
       - name: Ejecutar Trivy para IaC (Generar informe JSON)
         run: |
           trivy fs . --exit-code 0 --severity LOW,MEDIUM,HIGH,CRITICAL --format json --output trivy-iac-report.json
-          echo "==> Archivos tras Trivy:"
-          ls -la
-      - name: Ver contenido del informe Trivy
-        run: cat trivy-iac-report.json
 
       - name: Enviar informe de Trivy a DefectDojo
         run: |
-          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+          curl -X POST \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
             --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
             --form "scan_type=Trivy Scan" \
@@ -61,15 +57,10 @@ jobs:
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.4.0/dependency-check-8.4.0-release.zip
           unzip dependency-check-8.4.0-release.zip
           ./dependency-check/bin/dependency-check.sh --project gestor-bancario --scan . --disableAssembly --format JSON --out dependency-check-report.json
-          echo "==> Archivos tras Dependency-Check:"
-          ls -la
-
-      - name: Ver contenido del informe DependencyCheck
-        run: cat dependency-check-report.json
 
       - name: Enviar informe de Dependency-Check a DefectDojo
         run: |
-          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+          curl -X POST \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
             --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
             --form "scan_type=Dependency Check Scan" \
@@ -97,16 +88,11 @@ jobs:
 
       - name: Ejecutar análisis con SpotBugs (Generar informe XML)
         run: |
-          cd PAI2_ST10 && mvn clean install -Ddependency-check.skip=true spotbugs:check -X
-          echo "==> Archivos tras SpotBugs:"
-          ls -la 
-
-      - name: Ver contenido del informe Spotbugs
-        run: cat PAI2_ST10/target/spotbugsXml.xml
-
+          cd PAI2_ST10 && mvn clean install -Ddependency-check.skip=true spotbugs:spotbugs
+          
       - name: Enviar informe de SpotBugs a DefectDojo
         run: |
-          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+          curl -X POST \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
             --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
             --form "scan_type=SpotBugs Scan" \
@@ -136,22 +122,16 @@ jobs:
         run: |
           cd PAI2_ST10 && mvn clean install -DskipTests -Dspotbugs.skip=true -Ddependency-check.skip=true
 
-      - name: Ejecutar OWASP ZAP DAST (Generar informes HTML y JSON)
+      - name: Ejecutar OWASP ZAP DAST (Generar informe JSON)
         run: |
           docker run --rm -u root -v $(pwd):/zap/wrk -t zaproxy/zap-stable zap-full-scan.py \
             -t https://host.docker.internal:3343 \
             -J zap-report.json \
             -r zap-report.html
-          echo "==> Archivos tras OWASP ZAP:"
-          ls -la
-
-
-      - name: Ver contenido del informe ZAP
-        run: cat zap-report.json
 
       - name: Enviar informe de OWASP ZAP a DefectDojo
         run: |
-          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+          curl -X POST \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
             --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
             --form "scan_type=ZAP Scan" \
@@ -184,21 +164,13 @@ jobs:
       - name: Instalar Semgrep
         run: pip install semgrep
 
-      - name: Ejecutar la aplicación con Semgrep IAST (Generar informe SARIF)
+      - name: Ejecutar Semgrep (Generar informe SARIF)
         run: |
-          nohup java -jar target/mi-aplicacion.jar > app.log 2>&1 &
-          echo "Esperando a que la aplicación inicie..."
-          sleep 30
-          semgrep --config=auto --exclude target --exclude .git . --json > semgrep-report.sarif
-          echo "==> Archivos tras Semgrep:"
-          ls -la
-
-      - name: Ver contenido del informe Semgrep
-        run: cat semgrep-report.sarif
+          semgrep --config=auto --exclude target --exclude .git . --sarif > semgrep-report.sarif
 
       - name: Enviar informe de Semgrep a DefectDojo
         run: |
-          curl -s -w "%{http_code}" -o curl_output.txt -X POST \
+          curl -X POST \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
             --form "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
             --form "scan_type=Semgrep JSON Report" \
