--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -40,7 +40,7 @@ jobs:
             --form "active=true" \
             --form "verified=false" \
             --form "minimum_severity=Low" \
-            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
+            "${{ secrets.DEFECTDOJO_URL }}api/v2/import-scan/"
 
   sca:
     runs-on: ubuntu-latest
@@ -79,7 +79,7 @@ jobs:
             --form "active=true" \
             --form "verified=false" \
             --form "minimum_severity=Low" \
-            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
+            "${{ secrets.DEFECTDOJO_URL }}api/v2/import-scan/"
 
   sast:
     runs-on: ubuntu-latest
@@ -116,7 +116,7 @@ jobs:
             --form "active=true" \
             --form "verified=false" \
             --form "minimum_severity=Low" \
-            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
+            "${{ secrets.DEFECTDOJO_URL }}api/v2/import-scan/"
 
   dast:
     runs-on: ubuntu-latest
@@ -160,7 +160,7 @@ jobs:
             --form "active=true" \
             --form "verified=false" \
             --form "minimum_severity=Low" \
-            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
+            "${{ secrets.DEFECTDOJO_URL }}api/v2/import-scan/"
 
   iast:
     runs-on: ubuntu-latest
@@ -207,4 +207,4 @@ jobs:
             --form "active=true" \
             --form "verified=false" \
             --form "minimum_severity=Low" \
-            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/"
+            "${{ secrets.DEFECTDOJO_URL }}api/v2/import-scan/"
