--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -26,6 +26,13 @@ jobs:
           echo "==> Archivos tras Trivy:"
           ls -la
 
+      - name: Verificar si el informe de Trivy existe
+        run: |
+          if [ ! -f trivy-iac-report.json ]; then
+            echo "Error: El informe de Trivy no se ha generado."
+            exit 1
+          fi
+
       - name: Ver contenido del informe Trivy
         run: cat trivy-iac-report.json
 
@@ -66,6 +73,13 @@ jobs:
           echo "==> Archivos tras Dependency-Check:"
           ls -la
 
+      - name: Verificar si el informe de Dependency-Check existe
+        run: |
+          if [ ! -f dependency-check-report.json ]; then
+            echo "Error: El informe de Dependency-Check no se ha generado."
+            exit 1
+          fi
+
       - name: Ver contenido del informe DependencyCheck
         run: cat dependency-check-report.json
 
@@ -103,6 +117,13 @@ jobs:
           cd PAI2_ST10 && mvn clean install -Ddependency-check.skip=true spotbugs:check -X
           echo "==> Archivos tras SpotBugs:"
           ls -la 
+
+      - name: Verificar si el informe de SpotBugs existe
+        run: |
+          if [ ! -f PAI2_ST10/target/spotbugsXml.xml ]; then
+            echo "Error: El informe de SpotBugs no se ha generado."
+            exit 1
+          fi
 
       - name: Ver contenido del informe Spotbugs
         run: cat PAI2_ST10/target/spotbugsXml.xml
@@ -148,6 +169,13 @@ jobs:
             -r zap-report.html
           echo "==> Archivos tras OWASP ZAP:"
           ls -la
+
+      - name: Verificar si el informe de ZAP existe
+        run: |
+          if [ ! -f zap-report.json ]; then
+            echo "Error: El informe de ZAP no se ha generado."
+            exit 1
+          fi
 
       - name: Ver contenido del informe ZAP
         run: cat zap-report.json
@@ -197,6 +225,13 @@ jobs:
           echo "==> Archivos tras Semgrep:"
           ls -la
 
+      - name: Verificar si el informe de Semgrep existe
+        run: |
+          if [ ! -f semgrep-report.sarif ]; then
+            echo "Error: El informe de Semgrep no se ha generado."
+            exit 1
+          fi
+
       - name: Ver contenido del informe Semgrep
         run: cat semgrep-report.sarif
 
@@ -205,7 +240,7 @@ jobs:
           curl -X POST -v \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_KEY }}" \
             -F "engagement=${{ secrets.DEFECTDOJO_ENGAGEMENT_ID }}" \
-            -F "scan_type=Semgrep SARIF" \
+            -F "scan_type=Semgrep Scan" \
             -F "file=@semgrep-report.sarif" \
             -F "scan_date=$(date +%F)" \
             -F "active=true" \
